@@ -1,0 +1,13 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2000/REC-xhtml1-200000126/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <link rel="shortcut icon" href="/favicon.ico">
+</head>
+<body>
+
+<h1>Application not available.</h1>
+
+<p>Please, refresh your browser in about 5 seconds.</p>
+
+</body>
+</html>
