@@ -62,7 +62,7 @@
    <package>
     <name>pake</name>
     <channel>pear.symfony-project.com</channel>
-    <min>1.0.74</min>
+    <min>1.0.78</min>
    </package>
   </required>
  </dependencies>
